Version 1.2.3
* Fixed: If core spam plugin was not installed, the check for required fiels was rejecting trackbacks sometimes.

Version 1.2.2
* Simplified settings by removing obfuscation option. This is now turned on by default.
* Fixed regular expression matching.

Version 1.2.1
* Added an option to scramble the answer string and obfuscate the generated JavaScript

Version 1.2
* Implemented a way to specify custom questions to use instead of just arithmetic problems
* Added two more methods for retrieving the correct Captcha answer
* Fixed bug occurring when Captcha answer is 0
* Improved title spam detection
* Various fixes and improvements

Version 1.01
* Added "hidden captcha", checking for bots not having JS.
* Added a few methods from standard spam plugin, that are useful still.

Version 1.00
* Extracted honeypot function from commentspice